force-app/main/default/objects/Case/fields/Abrupt_Change__c.field-meta.xml
<CustomField>
    <fullName>Abrupt_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Abrupt Change</label>
    <type>Checkbox</type>
</CustomField>