force-app/main/default/objects/Case/fields/Access_to_Means__c.field-meta.xml
<CustomField>
    <fullName>Access_to_Means__c</fullName>
    <label>Access to Means</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Firearms - Unlocked</fullName>
            </value>
            <value>
                <fullName>Firearms - Locked</fullName>
            </value>
            <value>
                <fullName>Large medication supply</fullName>
            </value>
            <value>
                <fullName>Ligature risk</fullName>
            </value>
            <value>
                <fullName>Other/Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>