force-app/main/default/objects/Case/fields/Call_Back_and_Communication_Preference__c.field-meta.xml
<CustomField>
    <fullName>Call_Back_and_Communication_Preference__c</fullName>
    <label>Call Back and Communication Preference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>