force-app/main/default/objects/Case/fields/Cognition_Notes__c.field-meta.xml
<CustomField>
    <fullName>Cognition_Notes__c</fullName>
    <label>Cognition Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>