force-app/main/default/objects/Case/fields/Cost_Coverage_Issues__c.field-meta.xml
<CustomField>
    <fullName>Cost_Coverage_Issues__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cost/Coverage Issues</label>
    <type>Checkbox</type>
</CustomField>