force-app/main/default/objects/Case/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <label>Course</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abrupt (hours)</fullName>
            </value>
            <value>
                <fullName>Subacute (days)</fullName>
            </value>
            <value>
                <fullName>Chronic (months+)</fullName>
            </value>
            <value>
                <fullName>Waxing/waning</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>