force-app/main/default/objects/Case/fields/Dependent_Safety_Concern__c.field-meta.xml
<CustomField>
    <fullName>Dependent_Safety_Concern__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Child/Elder Safety Concern</label>
    <type>Checkbox</type>
</CustomField>