force-app/main/default/objects/Case/fields/ED_Visits_Count__c.field-meta.xml
<CustomField>
    <fullName>ED_Visits_Count__c</fullName>
    <label>ED Visits for Psych (#)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>