force-app/main/default/objects/Case/fields/Family_History__c.field-meta.xml
<CustomField>
    <fullName>Family_History__c</fullName>
    <label>Family History (1st-degree)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bipolar</fullName>
            </value>
            <value>
                <fullName>Psychosis/Schizophrenia</fullName>
            </value>
            <value>
                <fullName>Suicide</fullName>
            </value>
            <value>
                <fullName>SUD</fullName>
            </value>
            <value>
                <fullName>Depression/Anxiety</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>