force-app/main/default/objects/Case/fields/Family_History_Notes__c.field-meta.xml
<CustomField>
    <fullName>Family_History_Notes__c</fullName>
    <label>Family History Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>