force-app/main/default/objects/Case/fields/Home_Safety__c.field-meta.xml
<CustomField>
    <fullName>Home_Safety__c</fullName>
    <label>Home Safety</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Safe</fullName>
            </value>
            <value>
                <fullName>Unsafe</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>