force-app/main/default/objects/Case/fields/Impaired_Domains__c.field-meta.xml
<CustomField>
    <fullName>Impaired_Domains__c</fullName>
    <label>Impaired Domains</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Work</fullName>
            </value>
            <value>
                <fullName>School</fullName>
            </value>
            <value>
                <fullName>ADLs</fullName>
            </value>
            <value>
                <fullName>Sleep</fullName>
            </value>
            <value>
                <fullName>Appetite</fullName>
            </value>
            <value>
                <fullName>Energy</fullName>
            </value>
            <value>
                <fullName>Concentration</fullName>
            </value>
            <value>
                <fullName>Relationships</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>