force-app/main/default/objects/Case/fields/IPV_Concern__c.field-meta.xml
<CustomField>
    <fullName>IPV_Concern__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IPV Concern</label>
    <type>Checkbox</type>
</CustomField>