force-app/main/default/objects/Case/fields/Lethal_Means_Access__c.field-meta.xml
<CustomField>
    <fullName>Lethal_Means_Access__c</fullName>
    <label>Lethal Means Access</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Firearms - Unlocked</fullName>
            </value>
            <value>
                <fullName>Firearms - Locked</fullName>
            </value>
            <value>
                <fullName>Large medication supply</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>