force-app/main/default/objects/Case/fields/Mania_Notes__c.field-meta.xml
<CustomField>
    <fullName>Mania_Notes__c</fullName>
    <label>Mania Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>