force-app/main/default/objects/Case/fields/Mania_Symptoms__c.field-meta.xml
<CustomField>
    <fullName>Mania_Symptoms__c</fullName>
    <label>Mania/Hypomania Symptoms</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Decreased need for sleep</fullName>
            </value>
            <value>
                <fullName>Pressured speech</fullName>
            </value>
            <value>
                <fullName>Racing thoughts</fullName>
            </value>
            <value>
                <fullName>Grandiosity</fullName>
            </value>
            <value>
                <fullName>Risky spending/sex/driving</fullName>
            </value>
            <value>
                <fullName>Increased goal-directed activity</fullName>
            </value>
            <value>
                <fullName>Irritability</fullName>
            </value>
            <value>
                <fullName>Distractibility</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>