force-app/main/default/objects/Case/fields/Means_Safety_Plan__c.field-meta.xml
<CustomField>
    <fullName>Means_Safety_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Means Safety Plan Agreed</label>
    <type>Checkbox</type>
</CustomField>