force-app/main/default/objects/Case/fields/Medical_Red_Flags__c.field-meta.xml
<CustomField>
    <fullName>Medical_Red_Flags__c</fullName>
    <label>Medical Red Flags</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fever/infection</fullName>
            </value>
            <value>
                <fullName>Head injury</fullName>
            </value>
            <value>
                <fullName>Seizure</fullName>
            </value>
            <value>
                <fullName>Thyroid/endocrine</fullName>
            </value>
            <value>
                <fullName>Pain/untreated</fullName>
            </value>
            <value>
                <fullName>Steroid or stimulant use</fullName>
            </value>
            <value>
                <fullName>Medication started/stopped</fullName>
            </value>
            <value>
                <fullName>Delirium suspected</fullName>
            </value>
            <value>
                <fullName>Sleep apnea</fullName>
            </value>
            <value>
                <fullName>Other/Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>