force-app/main/default/objects/Case/fields/Neuromod_History__c.field-meta.xml
<CustomField>
    <fullName>Neuromod_History__c</fullName>
    <label>ECT/TMS/Ketamine/MAOI</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ECT</fullName>
            </value>
            <value>
                <fullName>TMS</fullName>
            </value>
            <value>
                <fullName>Ketamine/Esketamine</fullName>
            </value>
            <value>
                <fullName>MAOI</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>