force-app/main/default/objects/Case/fields/Notes_new__c.field-meta.xml
<CustomField>
    <fullName>Notes_new__c</fullName>
    <label>Instructions</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>