force-app/main/default/objects/Case/fields/Orientation__c.field-meta.xml
<CustomField>
    <fullName>Orientation__c</fullName>
    <label>Orientation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alert &amp; oriented (x3)</fullName>
            </value>
            <value>
                <fullName>Disoriented</fullName>
            </value>
            <value>
                <fullName>Confused/waxing-waning</fullName>
            </value>
            <value>
                <fullName>Memory impairment</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>