force-app/main/default/objects/Case/fields/Other_Prior_Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Other_Prior_Diagnosis__c</fullName>
    <label>Other Prior Diagnosis</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>