force-app/main/default/objects/Case/fields/Other_Symptoms__c.field-meta.xml
<CustomField>
    <fullName>Other_Symptoms__c</fullName>
    <label>Other Symptoms</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>