force-app/main/default/objects/Case/fields/Past_Suicide_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Past_Suicide_Attempts__c</fullName>
    <label>Past Suicide Attempts (#)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>