force-app/main/default/objects/Case/fields/Primary_Clinical_Question_Types__c.field-meta.xml
<CustomField>
    <fullName>Primary_Clinical_Question_Types__c</fullName>
    <inlineHelpText>Select all that apply to focus the psychiatrist consult.</inlineHelpText>
    <label>Primary Clinical Question Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Diagnosis clarification</fullName>
            </value>
            <value>
                <fullName>Medication strategy</fullName>
            </value>
            <value>
                <fullName>Safety risk assessment</fullName>
            </value>
            <value>
                <fullName>Psychosis evaluation</fullName>
            </value>
            <value>
                <fullName>Mania/hypomania evaluation</fullName>
            </value>
            <value>
                <fullName>Substance use/withdrawal management</fullName>
            </value>
            <value>
                <fullName>Medical contributor/clearance guidance</fullName>
            </value>
            <value>
                <fullName>Therapy/referral options</fullName>
            </value>
            <value>
                <fullName>Treatment-resistant depression strategy</fullName>
            </value>
            <value>
                <fullName>ADHD evaluation</fullName>
            </value>
            <value>
                <fullName>Anxiety differential</fullName>
            </value>
            <value>
                <fullName>Sleep disturbance management</fullName>
            </value>
            <value>
                <fullName>PTSD/trauma evaluation</fullName>
            </value>
            <value>
                <fullName>Disposition guidance (OP vs ED)</fullName>
            </value>
            <value>
                <fullName>Legal/safety (IPV, abuse, duty to warn)</fullName>
            </value>
            <value>
                <fullName>Cognitive change/delirium</fullName>
            </value>
            <value>
                <fullName>Perinatal/postpartum concerns</fullName>
            </value>
            <value>
                <fullName>Child/adolescent concern</fullName>
            </value>
            <value>
                <fullName>Capacity assessment</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>