force-app/main/default/objects/Case/fields/Prior_Diagnoses__c.field-meta.xml
<CustomField>
    <fullName>Prior_Diagnoses__c</fullName>
    <label>Prior Diagnoses</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MDD</fullName>
            </value>
            <value>
                <fullName>Bipolar I</fullName>
            </value>
            <value>
                <fullName>Bipolar II</fullName>
            </value>
            <value>
                <fullName>GAD</fullName>
            </value>
            <value>
                <fullName>Panic Disorder</fullName>
            </value>
            <value>
                <fullName>PTSD</fullName>
            </value>
            <value>
                <fullName>Psychotic Disorder</fullName>
            </value>
            <value>
                <fullName>ADHD</fullName>
            </value>
            <value>
                <fullName>OCD</fullName>
            </value>
            <value>
                <fullName>SUD</fullName>
            </value>
            <value>
                <fullName>Personality Disorder</fullName>
            </value>
            <value>
                <fullName>Eating Disorder</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>