force-app/main/default/objects/Case/fields/Protective_Factors__c.field-meta.xml
<CustomField>
    <fullName>Protective_Factors__c</fullName>
    <label>Protective Factors</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>