force-app/main/default/objects/Case/fields/Psych_Hospitalizations__c.field-meta.xml
<CustomField>
    <fullName>Psych_Hospitalizations__c</fullName>
    <label>Psych Hospitalizations (#)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>