force-app/main/default/objects/Case/fields/Psychosis_Notes__c.field-meta.xml
<CustomField>
    <fullName>Psychosis_Notes__c</fullName>
    <label>Psychosis Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>