force-app/main/default/objects/Case/fields/Psychosis_Symptoms__c.field-meta.xml
<CustomField>
    <fullName>Psychosis_Symptoms__c</fullName>
    <label>Psychosis Symptoms</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auditory hallucinations</fullName>
            </value>
            <value>
                <fullName>Visual hallucinations</fullName>
            </value>
            <value>
                <fullName>Tactile/other hallucinations</fullName>
            </value>
            <value>
                <fullName>Persecutory delusions</fullName>
            </value>
            <value>
                <fullName>Ideas of reference</fullName>
            </value>
            <value>
                <fullName>Grandiosity</fullName>
            </value>
            <value>
                <fullName>Thought disorganization</fullName>
            </value>
            <value>
                <fullName>Bizarre behavior</fullName>
            </value>
            <value>
                <fullName>Catatonia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>