force-app/main/default/objects/Case/fields/Psychosocial_Stressors__c.field-meta.xml
<CustomField>
    <fullName>Psychosocial_Stressors__c</fullName>
    <label>Psychosocial Stressors</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Housing insecurity</fullName>
            </value>
            <value>
                <fullName>Food insecurity</fullName>
            </value>
            <value>
                <fullName>Caregiver burden</fullName>
            </value>
            <value>
                <fullName>Legal issues</fullName>
            </value>
            <value>
                <fullName>Job/school risk</fullName>
            </value>
            <value>
                <fullName>Relationship conflict</fullName>
            </value>
            <value>
                <fullName>Limited supports</fullName>
            </value>
            <value>
                <fullName>Reliable support present</fullName>
            </value>
            <value>
                <fullName>Financial stress</fullName>
            </value>
            <value>
                <fullName>Other/Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>