force-app/main/default/objects/Case/fields/Recent_Trauma__c.field-meta.xml
<CustomField>
    <fullName>Recent_Trauma__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recent Trauma</label>
    <type>Checkbox</type>
</CustomField>