force-app/main/default/objects/Case/fields/Reliable_Supports__c.field-meta.xml
<CustomField>
    <fullName>Reliable_Supports__c</fullName>
    <label>Reliable Supports</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Limited</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>