force-app/main/default/objects/Case/fields/Safety_Notes__c.field-meta.xml
<CustomField>
    <fullName>Safety_Notes__c</fullName>
    <label>Safety Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>