force-app/main/default/objects/Case/fields/Self_Harm_History__c.field-meta.xml
<CustomField>
    <fullName>Self_Harm_History__c</fullName>
    <label>Self-Harm History</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>NSSI only</fullName>
            </value>
            <value>
                <fullName>Prior suicide attempt</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>