force-app/main/default/objects/Case/fields/Suicidal_Ideation__c.field-meta.xml
<CustomField>
    <fullName>Suicidal_Ideation__c</fullName>
    <label>Suicidal Ideation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Passive</fullName>
            </value>
            <value>
                <fullName>Active - No Plan</fullName>
            </value>
            <value>
                <fullName>Active - With Plan</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>