force-app/main/default/objects/Case/fields/Suicidal_Intent__c.field-meta.xml
<CustomField>
    <fullName>Suicidal_Intent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Suicidal Intent</label>
    <type>Checkbox</type>
</CustomField>