force-app/main/default/objects/Case/fields/Suicide_Plan_Details__c.field-meta.xml
<CustomField>
    <fullName>Suicide_Plan_Details__c</fullName>
    <label>Suicide Plan Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>