force-app/main/default/objects/Case/fields/Supports_Notes__c.field-meta.xml
<CustomField>
    <fullName>Supports_Notes__c</fullName>
    <label>Supports Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>