force-app/main/default/objects/Case/fields/Symptom_Onset_Date__c.field-meta.xml
<CustomField>
    <fullName>Symptom_Onset_Date__c</fullName>
    <label>Symptom Onset Date</label>
    <type>Date</type>
</CustomField>