force-app/main/default/objects/Case/fields/Top_Symptoms__c.field-meta.xml
<CustomField>
    <fullName>Top_Symptoms__c</fullName>
    <label>Top Symptoms</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Depressed mood</fullName>
            </value>
            <value>
                <fullName>Anhedonia</fullName>
            </value>
            <value>
                <fullName>Anxiety</fullName>
            </value>
            <value>
                <fullName>Panic</fullName>
            </value>
            <value>
                <fullName>Insomnia</fullName>
            </value>
            <value>
                <fullName>Hypersomnia</fullName>
            </value>
            <value>
                <fullName>Appetite change</fullName>
            </value>
            <value>
                <fullName>Low energy</fullName>
            </value>
            <value>
                <fullName>Poor concentration</fullName>
            </value>
            <value>
                <fullName>Psychosis</fullName>
            </value>
            <value>
                <fullName>Mania/hypomania</fullName>
            </value>
            <value>
                <fullName>Agitation/violence</fullName>
            </value>
            <value>
                <fullName>Cognitive change</fullName>
            </value>
            <value>
                <fullName>Trauma symptoms</fullName>
            </value>
            <value>
                <fullName>Substance-related</fullName>
            </value>
            <value>
                <fullName>Suicidal thoughts</fullName>
            </value>
            <value>
                <fullName>Homicidal thoughts</fullName>
            </value>
            <value>
                <fullName>Somatic symptoms</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>