force-app/main/default/objects/Case/fields/Unrelated_Call__c.field-meta.xml
<CustomField>
    <fullName>Unrelated_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unrelated Call</label>
    <type>Checkbox</type>
</CustomField>