force-app/main/default/objects/Case/fields/Unrelated_Call_Details__c.field-meta.xml
<CustomField>
    <fullName>Unrelated_Call_Details__c</fullName>
    <label>Unrelated Call Details</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>