force-app/main/default/objects/Case/fields/Unrelated_Call_Reason__c.field-meta.xml
<CustomField>
    <fullName>Unrelated_Call_Reason__c</fullName>
    <label>Unrelated Call Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VMAP Call</fullName>
            </value>
            <value>
                <fullName>MOMs Call</fullName>
            </value>
            <value>
                <fullName>Wrong Number</fullName>
            </value>
            <value>
                <fullName>Could Not Reach Provider</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>