force-app/main/default/objects/Case/fields/Violence_Details__c.field-meta.xml
<CustomField>
    <fullName>Violence_Details__c</fullName>
    <label>Violence/Threat Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>