force-app/main/default/objects/Case/fields/Violence_Recent__c.field-meta.xml
<CustomField>
    <fullName>Violence_Recent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recent Violence/Agitation</label>
    <type>Checkbox</type>
</CustomField>