force-app/main/default/objects/Case/fields/Weapons_Access__c.field-meta.xml
<CustomField>
    <fullName>Weapons_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Weapons Access</label>
    <type>Checkbox</type>
</CustomField>