force-app/main/default/objects/Case/recordTypes/Care_Navigation.recordType-meta.xml
<RecordType>
    <fullName>Care_Navigation</fullName>
    <active>true</active>
    <businessProcess>Care Navigation</businessProcess>
    <label>Care Navigation</label>
</RecordType>