force-app/main/default/objects/Case/recordTypes/Care_Request.recordType-meta.xml
<RecordType>
    <fullName>Care_Request</fullName>
    <active>true</active>
    <businessProcess>Care Request</businessProcess>
    <label>Care Request</label>
</RecordType>