force-app/main/default/objects/Case/recordTypes/Patient_Case.recordType-meta.xml
<RecordType>
    <fullName>Patient_Case</fullName>
    <active>true</active>
    <businessProcess>Patient Case</businessProcess>
    <label>Patient Case</label>
</RecordType>