force-app/main/default/objects/Case/validationRules/DeleteCNCRNotesBeforeUnrelatedCall.validationRule-meta.xml
<ValidationRule>
    <fullName>DeleteCNCRNotesBeforeUnrelatedCall</fullName>
    <active>false</active>
    <description>You shouldn&apos;t have an subcases or notes on unrelated calls</description>
    <errorConditionFormula>AND(
    OR(
        Care_Note_Count__c &gt; 0,
        Number_of_CN_Offered__c &gt; 0,
        Number_of_Care_Requests_Offered__c &gt; 0
    ),
    ISPICKVAL(Status, &quot;Closed - Unrelated Call&quot;)
)</errorConditionFormula>
    <errorMessage>Please be sure to delete any Care Requests, Care Navigation, or Notes before marking a call as unrelated</errorMessage>
</ValidationRule>