force-app/main/default/objects/Case/validationRules/Family_History_Notes_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Family_History_Notes_Required</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(Family_History_Notes__c) &amp;&amp; NOT(ISBLANK(Family_History__c))</errorConditionFormula>
    <errorDisplayField>Family_History_Notes__c</errorDisplayField>
    <errorMessage>Family History Notes are Required</errorMessage>
</ValidationRule>