force-app/main/default/objects/Case/validationRules/Medical_Notes_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Medical_Notes_Required</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(Medical_Notes__c) &amp;&amp; NOT(ISBLANK(Medical_Red_Flags__c))</errorConditionFormula>
    <errorDisplayField>Medical_Notes__c</errorDisplayField>
    <errorMessage>Medical Notes are Required</errorMessage>
</ValidationRule>