force-app/main/default/objects/Case/validationRules/No_Manual_Esclations.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Manual_Esclations</fullName>
    <active>true</active>
    <description>Stops a user from manually esclating a case</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Status, &quot;Escalated&quot;),
    NOT(IsEscalated)
)</errorConditionFormula>
    <errorMessage>Cases can&apos;t be manually escalated. Please reach out to Catherine if there&apos;s an issue with the case.</errorMessage>
</ValidationRule>